# ffsend

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  IDEAS.md  LICENSE  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  appveyor.yml  build.rs  snapcraft.login
.github/: FUNDING.yml
api/: Cargo.toml  LICENSE
api/src/: config.rs  key_set.rs  lib.rs  metadata.rs  reader.rs  send_file.rs  upload.rs
api/src/action/: delete.rs  download.rs  exists.rs  info.rs  metadata.rs  mod.rs  params.rs  password.rs  upload.rs
api/src/api/: data.rs  mod.rs  nonce.rs  request.rs  url.rs
api/src/crypto/: b64.rs  hdkf.rs  key_set.rs  mod.rs  sign.rs
api/src/ext/: mod.rs  status_code.rs
api/src/file/: file.rs  metadata.rs  mod.rs  remote_file.rs
cli/: Cargo.toml  history.toml
cli/src/: app.rs  error.rs  history.rs  history_tool.rs  host.rs  main.rs  progress.rs  util.rs
cli/src/action/: debug.rs  delete.rs  download.rs  exists.rs  history.rs  info.rs  mod.rs  params.rs  password.rs  upload.rs
cli/src/archive/: archiver.rs  mod.rs
cli/src/cmd/: cmd_delete.rs  cmd_download.rs  cmd_info.rs  cmd_params.rs  cmd_password.rs  cmd_upload.rs  handler.rs  mod.rs
cli/src/cmd/arg/: download_limit.rs  host.rs  mod.rs  owner.rs  password.rs  url.rs
cli/src/cmd/cmd/: .rs  delete.rs  download.rs  exists.rs  info.rs  mod.rs  params.rs  password.rs  upload.rs
cli/src/cmd/matcher/: debug.rs  download.rs  exists.rs  info.rs  main.rs  mod.rs  password.rs  upload.rs
cli/src/cmd/subcmd/: debug.rs  delete.rs  download.rs  history.rs  mod.rs  upload.rs
contrib/completions/: _ffsend  _ffsend.ps1  ffsend.bash  ffsend.elv  ffsend.fish  gen_completions
contrib/util/nautilus/: README.md  firefox-send
docs/: CONTRIBUTING.md
pkg/: create_deb
pkg/alpine/: APKBUILD
pkg/aur/: PKGBUILD  aur.pub
pkg/aur/ffsend/: PKGBUILD
pkg/aur/ffsend-bin/: PKGBUILD
pkg/aur/ffsend-git/: PKGBUILD
pkg/aur/git/: PKGBUILD
pkg/choco/ffsend/: ffsend.nuspec
pkg/choco/ffsend/tools/: LICENSE.txt  VERIFICATION.txt  chocolateyinstall.ps1
pkg/deb/: blah.txt  postinst  prerm
pkg/deb/DEBIAN/: control  prerm
pkg/docker/: Dockerfile
pkg/ebuild/: ffsend-0.1.2.ebuild
pkg/scoop/: README.md  ffsend.json
pkg/snap/: .gitignore  snapcraft.yaml
res/: asciinema-demo.json  asciinema-ffsend-demo.json  asciinema-to-svg  create-gif-ffsend-demo
src/: app.rs  arg_handler.rs  b64.rs  client.rs  config.rs  crypto.rs  error.rs  history.rs  history_tool.rs  main.rs  progress.rs  reader.rs  urlshorten.rs  util.rs
src/action/: debug.rs  delete.rs  download.rs  exists.rs  history.rs  info.rs  mod.rs  params.rs  password.rs  upload.rs  version.rs
src/action/generate/: completions.rs  mod.rs
src/archive/: archive.rs  archiver.rs  mod.rs
src/cmd/: cmd_upload.rs  handler.rs  mod.rs
src/cmd/arg/: api.rs  basic_auth.rs  download_limit.rs  expiry_time.rs  gen_passphrase.rs  host.rs  mod.rs  owner.rs  password.rs  url.rs
src/cmd/matcher/: debug.rs  delete.rs  download.rs  exists.rs  history.rs  info.rs  main.rs  mod.rs  params.rs  password.rs  upload.rs  version.rs
src/cmd/matcher/generate/: completions.rs  mod.rs
src/cmd/subcmd/: debug.rs  delete.rs  download.rs  exists.rs  history.rs  info.rs  mod.rs  params.rs  password.rs  upload.rs  version.rs
src/cmd/subcmd/generate/: completions.rs  mod.rs
src/send/: file.rs  key_set.rs  metadata.rs  mod.rs  reader.rs  send_file.rs  upload.rs
