[package]
name = "ffsend"
version = "0.2.7"
authors = ["Tim Visee <timvisee@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/ffsend"
repository = "https://gitlab.com/timvisee/ffsend"
description = """\
    Easily and securely share files from the command line.\n\
    A fully featured Firefox Send client.\
"""
keywords = ["send", "firefox", "cli"]
categories = [
    "authentication",
    "command-line-interface",
    "command-line-utilities",
    "cryptography",
    "network-programming",
]
exclude = [
    "res/*",
]
edition = "2018"

[package.metadata.deb]
section = "utility"
extended-description = """\
Easily and securely share files and directories from the command line through
a safe, private and encrypted link using a single simple command. \
Files are shared using the Send service and may be up to 2GB. \
Others are able to download these files with this tool, \
or through their web browser.\n\
\n\
All files are always encrypted on the client, \
and secrets are never shared with the remote host. \
An optional password may be specified, and a default file lifetime of 1 \
(up to 20) download or 24 hours is enforced to ensure your stuff does not \
remain online forever. This provides a secure platform to share your files."""
priority = "standard"
license-file = ["LICENSE", "3"]
depends = "$auto, libssl1.1, ca-certificates, xclip"
maintainer-scripts = "pkg/deb"

[badges]
gitlab = { repository = "timvisee/ffsend", branch = "master" }

[[bin]]
name = "ffsend"
path = "src/main.rs"

[features]
default = ["archive", "clipboard", "history", "send2", "send3"]

# Compile with file archiving support
archive = ["tar"]

# Compile with file history support
history = []

# Compile without colored output support
no-color = ["colored/no-color"]

# Support for Firefox Send v2
send2 = ["ffsend-api/send2"]

# Support for Firefox Send v3
send3 = ["ffsend-api/send3"]

[dependencies]
chbs = "0.0.8"
chrono = "0.4"
clap = "2.31"
colored = "1.7"
derive_builder = "0.7"
directories = "1.0"
failure = "0.1"
ffsend-api = { version = "0.2.2", default-features = false }
fs2 = "0.4"
lazy_static = "1.0"
open = "1"
openssl-probe = "0.1"
pbr = "1"
prettytable-rs = "0.8"
rpassword = "2.1"
serde = "1.0"
serde_derive = "1.0"
tar = { version = "0.4", optional = true }
tempfile = "3"
toml = "0.4"
version-compare = "0.0.6"

[target.'cfg(not(target_os = "linux"))'.dependencies]
clipboard = { version = "0.5", optional = true }
