[package]
name = "ffsend-api"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
workspace = ".."

[dependencies]
arrayref = "0.3"
base64 = "0.9"
chrono = "0.4"
hkdf = "0.3"
hyper = "0.11.9" # same as reqwest
mime_guess = "2.0.0-alpha.2"
openssl = "0.10"
regex = "0.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
url = "1.7"
