[package]
name = "ffsend-api"
description = "A simple Firefox Send API client."
version = "0.0.1"
authors = ["Tim Visee <https://timvisee.com/>"]
workspace = ".."

[dependencies]
arrayref = "0.3"
base64 = "0.9"
chrono = {version = "0.4", features = ["serde"]}
derive_builder = "0.5"
failure = "0.1"
failure_derive = "0.1"
hkdf = "0.3"
hyper = "0.11.9" # same as reqwest
mime_guess = "2.0.0-alpha.2"
openssl = "0.10"
regex = "0.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
time = "0.1"
url = "1.7"
url_serde = "0.2"
