[package]
name = "ffsend-cli"
description = "A simple Firefox Send CLI client."
version = "0.0.1"
authors = ["Tim Visee <https://timvisee.com/>"]
workspace = ".."

[[bin]]
path = "src/main.rs"
name = "ffsend"

[[bin]]
path = "src/main.rs"
name = "ffs"

[features]
default = ["clipboard"]

# Compile without colored output support
no-color = ["colored/no-color"]

[dependencies]
clap = "2.31"
clipboard = { version = "0.4", optional = true }
colored = "1.6"
derive_builder = "0.5"
failure = "0.1"
failure_derive = "0.1"
ffsend-api = { version = "*", path = "../api" }
open = "1"
pbr = "1"
rpassword = "2.0"
