[package]
name = "ffsend"
description = "A simple Firefox Send CLI client."
version = "0.0.1"
authors = ["Tim Visee <https://timvisee.com/>"]
workspace = ".."

[[bin]]
path = "src/main.rs"
name = "ffsend"

[features]
default = ["clipboard"]

# Compile without colored output support
no-color = ["colored/no-color"]

[dependencies]
app_dirs2 = "2.0"
clap = "2.31"
clipboard = { version = "0.4", optional = true }
colored = "1.6"
derive_builder = "0.5"
failure = "0.1"
failure_derive = "0.1"
ffsend-api = { version = "*", path = "../api" }
lazy_static = "1.0"
open = "1"
pbr = "1"
rpassword = "2.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
toml = "0.4"
